# ZindiAutoSubmitIntelligentBot

./: Makefile  README.md  ZindiAutoSubmitIntelligentBotArchitecture.md  barbados-traffic-analysis-challenge_submission.csv  bitbucket-pipelines.yml  conda.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  robot.yaml  tasks.py
Workflow/: process.py  workflow.py
libraries/: Config.py  automation_setup.py  bitbucket_setup.py  bitwarden_credential.py  exception.py  jira_setup.py  sharepoint.py  submissionfileschecks.py  utils.py  zindi_site.py
libraries/zindi/: user.py  utils.py
libraries/zindi/docs/: template.py
libraries/zindi/docs/utils/: challenge_idx_selector.py  download.py  get_challenges.py  join_challenge.py  n_subimissions_per_day.py  participations.py  print_challenges.py  print_lb.py  print_submission_board.py  upload.py  user_on_lb.py
tests/: conftest.py  test_process.py  test_workflow.py
